# openvibe

./: AUTHORS  CMakeLists.txt  INSTALL  README
modules/: CMakeLists.txt
modules/ebml/src/: IReader.cpp  IWriterHelper.cpp
modules/ebml/trunc/: CMakeLists.txt
modules/fs/: CMakeLists.txt
modules/fs/test/: test_fs.cpp
modules/socket/: CMakeLists.txt
modules/socket/src/: IConnectionServer.cpp
modules/xml/: CMakeLists.txt
modules/xml/src/: IWriter.cpp
openvibe-applications/acquisition-server/trunc/: CMakeLists.txt
openvibe-kernel-omk/trunc/src/: CMakeLists.txt  FindOpenMASK.cmake  FindOpenViBE.cmake  FindOpenViBEModuleFS.cmake
openvibe-toolkit/trunc/src/: CMakeLists.txt  FindOpenViBE.cmake  ovtk_main.cpp
openvibe/trunc/src/: CMakeLists.txt
toolkit/: CMakeLists.txt
trunk/: AUTHORS  CMakeLists.txt  INSTALL  README
trunk/cmake-modules/: FindOpenViBE.cmake  FindOpenViBECommon.cmake  FindOpenViBEModuleAutomaton.cmake  FindOpenViBEModuleEBML.cmake  FindOpenViBEModuleFS.cmake  FindOpenViBEModuleSocket.cmake  FindOpenViBEModuleStream.cmake  FindOpenViBEModuleSystem.cmake  FindOpenViBEModuleXML.cmake  FindOpenViBEPluginsGlobalDefines.cmake  FindOpenViBEToolkit.cmake  FindThirdPartyActiCHampAPI.cmake  FindThirdPartyBoost.cmake  FindThirdPartyBoost_FileSystem.cmake  FindThirdPartyBoost_Regex.cmake  FindThirdPartyBoost_System.cmake  FindThirdPartyBoost_Thread.cmake  FindThirdPartyBrainmasterCodeMakerAPI.cmake  FindThirdPartyCEGUI.cmake  FindThirdPartyDotSceneLoader.cmake  FindThirdPartyEigen.cmake  FindThirdPartyEmotivAPI.cmake  FindThirdPartyExpat.cmake  FindThirdPartyGMobiLabPlusAPI.cmake  FindThirdPartyGSL.cmake  FindThirdPartyGTK.cmake  FindThirdPartyGUSBampCAPI.cmake  FindThirdPartyGlade.cmake  FindThirdPartyITPP.cmake  FindThirdPartyLua.cmake  FindThirdPartyMatlab.cmake  FindThirdPartyOBT.cmake  FindThirdPartyOIS.cmake  FindThirdPartyOgre3D.cmake  FindThirdPartyOgreCEGUIRenderer.cmake  FindThirdPartyOpenAL.cmake  FindThirdPartyOpenMASK4.cmake  FindThirdPartyPython.cmake  FindThirdPartyThinkGearAPI.cmake  FindThirdPartyTorch.cmake  (+10 more)
trunk/cmake-modules/launchers/: OpenViBE-external-application-launcher.cmd-base  OpenViBE-external-application-launcher.sh-base  Plugins.cfg-base  openvibe-launcher.sh-base  ov-launcher.cmd-base  ov-launcher.sh-base
trunk/debian/: copyright  rules
trunk/openvibe/: CMakeLists.txt
trunk/openvibe-applications/: CMakeLists.txt
trunk/openvibe-common/: CMakeLists.txt
trunk/openvibe-common/src/: ov_common_types.h
trunk/openvibe-documentation/: CMakeLists.txt
trunk/openvibe-documentation/trunc/: CMakeLists.txt
trunk/openvibe-externals/: CMakeLists.txt
trunk/openvibe-kernel-omk/: CMakeLists.txt
trunk/openvibe-kernel-omk/trunc/: CMakeLists.txt
trunk/openvibe-plugins/: CMakeLists.txt
trunk/openvibe-scenarios/: CMakeLists.txt
trunk/openvibe-scenarios/trunc/: CMakeLists.txt
trunk/openvibe-toolkit/: CMakeLists.txt
trunk/openvibe-toolkit/trunc/: CMakeLists.txt
trunk/openvibe/trunc/: CMakeLists.txt
trunk/scripts/: linux-box-algorithm-wizard  linux-build  linux-clean  linux-create_tag  linux-init_env_command  linux-init_env_command-skeleton  linux-install_dependencies  linux-test  win32-build.cmd  win32-clean.cmd  win32-generate-vc-proj.cmd  win32-init_env_command.cmd  win32-init_env_command.cmd-skeleton  win32-install_dependencies.nsi  win32-launch-vc.cmd  win32-openvibe-x.x.x-setup.nsi
trunk/test/: CTestConfig.cmake  CTestCustom.cmake  CTestTestfile.cmake  InstallDependencies  README.txt  buildWindows  openVibeTests.cmake
trunk2/: CMakeLists.txt  INSTALL  README
trunk2/cmake-modules/: FindOpenViBE.cmake  FindOpenViBECommon.cmake  FindOpenViBEContributions.cmake  FindOpenViBEModuleAutomaton.cmake  FindOpenViBEModuleEBML.cmake  FindOpenViBEModuleFS.cmake  FindOpenViBEModuleSystem.cmake  FindOpenViBEModuleXML.cmake  FindOpenViBEToolkit.cmake  FindThirdPartyBLiFF.cmake  FindThirdPartyBrainmasterCodeMakerAPI.cmake  FindThirdPartyITPP.cmake  FindThirdPartyPThreadsVCE2.cmake  FindThirdPartyThinkGearAPI.cmake  FindThirdPartyX11.cmake  OvAddProjects.cmake  OvInstallLaunchScript.cmake
trunk2/cmake-modules/launchers/: openvibe-external-application-launcher.cmd-base  openvibe-launcher.cmd-base  openvibe-ogre-plugins.cfg-base
trunk2/common/include/: ov_common_defines.h  ovp_global_defines.h
trunk2/contrib/: CMakeLists.txt
trunk2/contrib/cicit-garches/: CMakeLists.txt
trunk2/contrib/common/: contribAcquisitionServer.cmake  contribAcquisitionServer.inl  contribAcquisitionServerLinkLibs.cmake
trunk2/contrib/ghent-univ/: CMakeLists.txt
trunk2/contrib/gipsa-lab/: CMakeLists.txt
trunk2/contrib/inserm/: CMakeLists.txt
trunk2/contrib/various/: CMakeLists.txt
trunk2/core/: CMakeLists.txt
trunk2/core/applications/: CMakeLists.txt
trunk2/core/cmake-modules/: FindOpenViBE.cmake  FindOpenViBEModuleAutomaton.cmake  FindOpenViBEModuleEBML.cmake  FindOpenViBEModuleFS.cmake  FindOpenViBEModuleSocket.cmake  FindOpenViBEModuleSystem.cmake  FindOpenViBEModuleXML.cmake  FindOpenViBEToolkit.cmake  FindThirdPartyActiCHampAPI.cmake  FindThirdPartyBoost_System.cmake  FindThirdPartyExpat.cmake  FindThirdPartyGUSBampCAPI.cmake  FindThirdPartyLua.cmake  FindThirdPartyOgre3D.cmake  FindThirdPartyOpenAL.cmake  OvAddProjects.cmake  OvAddSingleProject.cmake
trunk2/core/common/: CMakeLists.txt
trunk2/core/kernel/: CMakeLists.txt
trunk2/core/modules/: CMakeLists.txt
trunk2/core/openvibe/: CMakeLists.txt
trunk2/core/plugins/: CMakeLists.txt
trunk2/core/scripts/: linux-build  win32-clean.cmd  win32-launch-vc.cmd  win32-openvibe-x.x.x-setup.nsi
trunk2/debian/: control  copyright
trunk2/documentation/: CMakeLists.txt
trunk2/kernel/: CMakeLists.txt
trunk2/modules/: CMakeLists.txt
trunk2/openvibe/: CMakeLists.txt
trunk2/plugins/: CMakeLists.txt
trunk2/scripts/: linux-build  linux-install_dependencies  linux-test  win32-build.cmd  win32-generate-vc-proj.cmd  win32-launch-vc.cmd  win32-openvibe-x.x.x-setup.nsi
trunk2/test/: CTestConfig.cmake  CTestTestfile.cmake  README.txt
trunk2/toolkit/: CMakeLists.txt
(+3671 files in other folders)
