OPTION(BUILD_OPENVIBE_MODULES "Build OpenViBE modules" ON)
OPTION(BUILD_OPENVIBE_MODULES_EXAMPLES "Build OpenViBE modules examples" OFF)

IF(BUILD_OPENVIBE_MODULES)
	OPTION(BUILD_OPENVIBE_MODULES_EBML "Build OpenViBE module EBML" ON)
	OPTION(BUILD_OPENVIBE_MODULES_FS "Build OpenViBE module FS" ON)
	OPTION(BUILD_OPENVIBE_MODULES_XML "Build OpenViBE module XML" ON)
	OPTION(BUILD_OPENVIBE_MODULES_SYSTEM "Build OpenViBE module SYSTEM" ON)

	IF(BUILD_OPENVIBE_MODULES_EBML)
		SUBDIRS(ebml)
	ENDIF(BUILD_OPENVIBE_MODULES_EBML)
	IF(BUILD_OPENVIBE_MODULES_FS)
		SUBDIRS(fs)
	ENDIF(BUILD_OPENVIBE_MODULES_FS)
	IF(BUILD_OPENVIBE_MODULES_SYSTEM)
		SUBDIRS(system)
	ENDIF(BUILD_OPENVIBE_MODULES_SYSTEM)
	IF(BUILD_OPENVIBE_MODULES_XML)
		SUBDIRS(xml)
	ENDIF(BUILD_OPENVIBE_MODULES_XML)
ENDIF(BUILD_OPENVIBE_MODULES)
